# SPA-T14

./: .ccls  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  docker.nix  run-alex-tests.sh  run-all-tests.sh  runtests-iteration2.sh  runtests-iteration3.sh  runtests.sh  runtests_invalid.sh  runtests_valid.sh  shell.nix  test-iteration2-set1.sh
docs/: spa.tex
lib/: catch.hpp
lib/better_enums/: enums.h
scripts/: clangformat.sh  format_check.sh
src/autotester_gui/: CMakeLists.txt
src/profiling/: CMakeLists.txt
src/profiling/src/: main.cpp
src/spa/: CMakeLists.txt
src/spa/src/program_knowledge_base/: pkb.cpp  pkb.h  pkb_definitions.h  pkb_exceptions.h  pkb_manager.cpp  pkb_manager.h  pkb_preprocessor.cpp  pkb_preprocessor.h  pkb_storage.cpp  pkb_storage.h
src/spa/src/query_builder/: query_builder.cpp  query_builder.h
src/spa/src/query_builder/core/: query_lexer.cpp  query_lexer.h  query_parser.cpp  query_parser.h  query_preprocessor.cpp  query_preprocessor.h  query_tokenizer.cpp  query_tokenizer.h  query_validator.cpp  query_validator.h
src/spa/src/query_builder/pql/: attrref.cpp  attrref.h  declaration.h  design_entity.cpp  design_entity.h  factor.cpp  factor.h  matcher.cpp  matcher.h  pattern.cpp  pattern.h  pattern_cond.h  patternb.h  pql.h  query.cpp  query.h  quoteident.cpp  quoteident.h  ref.h  relation.cpp  relation.h  relcond.h  result.h  stmtentref.h  suchthat.cpp  suchthat.h  synonym.cpp  synonym.h  underscore.h  with_cond.cpp  with_cond.h  withcond.cpp  withcond.h
src/spa/src/query_evaluator/: pql.cpp  pql.h  query_evaluator.cpp  query_evaluator.h  query_preprocessor.cpp  query_preprocessor.h  query_tokenizer.cpp  query_tokenizer.h
src/spa/src/query_evaluator/core/: exceptions.h  query_preprocessor.cpp  query_preprocessor.h  query_tokenizer.cpp  query_tokenizer.h  query_validator.cpp  query_validator.h
src/spa/src/query_evaluator/pql/: declaration.h  design_entity.cpp  design_entity.h  factor.cpp  factor.h  pattern.cpp  pattern.h  pql.cpp  pql.h  query.cpp  query.h  quoteident.cpp  quoteident.h  relation.cpp  relation.h  stmtentref.h  suchthat.cpp  suchthat.h  synonym.cpp  synonym.h  underscore.h  util.cpp  util.h
src/spa/src/query_executor/: clause_functions.cpp  clause_prioritizer.cpp  clause_prioritizer.h  constraint_solver.cpp  constraint_solver.h  query_executor.cpp  query_executor.h  query_executor_utils.cpp
src/spa/src/query_executor/constraint_solver/: constraint_database.cpp  constraint_database.h  constraint_solver.cpp  constraint_solver.h  constraint_solver_utils.cpp  constraint_table.cpp  constraint_table.h  query_constraints.cpp  query_constraints.h
src/spa/src/query_executor/pattern/: AssignPatternEvaluator.cpp  AssignPatternEvaluator.h  IfPatternEvaluator.h  PatternEvaluator.cpp  PatternEvaluator.h  WhilePatternEvaluator.h
src/spa/src/query_executor/suchthat/: AffectsEvaluator.h  AffectsPEvaluator.h  AffectsPTEvaluator.h  AffectsTEvaluator.h  CallsEvaluator.h  CallsTEvaluator.h  FollowsEvaluator.h  FollowsTEvaluator.h  ModifiesPEvaluator.h  ModifiesSEvaluator.h  NextEvaluator.h  NextPEvaluator.h  NextPTEvaluator.h  NextTEvaluator.h  ParentEvaluator.h  ParentTEvaluator.h  SuchThatEvaluator.cpp  SuchThatEvaluator.h  UsesPEvaluator.h  UsesSEvaluator.h
src/spa/src/query_executor/with/: WithEvaluator.cpp  WithEvaluator.h
src/spa/src/query_manager/: constraint_solver.cpp  constraint_solver.h  query_manager.cpp  query_manager.h  query_manager_suchthat.cpp  query_manager_suchthat_follows.cpp  query_manager_utils.cpp
src/spa/src/query_manager/pattern/: PatternEvaluator.cpp  PatternEvaluator.h
src/spa/src/query_manager/relations/: FollowsEvaluator.h  FollowsTEvaluator.h  ModifiesSEvaluator.h  ParentEvaluator.h  ParentTEvaluator.h  SuchThatEvaluator.cpp  SuchThatEvaluator.h  UsesSEvaluator.h
src/spa/src/query_manager/suchthat/: FollowsEvaluator.h  FollowsTEvaluator.h  ModifiesSEvaluator.h  ParentEvaluator.h  ParentTEvaluator.h  SuchThatEvaluator.cpp  SuchThatEvaluator.h  UsesSEvaluator.h
src/spa/src/simple_parser/: exceptions.h  interface.cpp  interface.h  lexer.cpp  lexer.h  parser.cpp  parser.h  pratt.cpp  pratt.h  token.cpp  token.h
src/spa/src/spa_manager/: spa_manager.cpp  spa_manager.h
src/spa/src/structs/: node.cpp  node.h
src/spa/src/utils/: utils.cpp  utils.h
src/unit_testing/: CMakeLists.txt
src/unit_testing/src/: TestConstraintSolver.cpp  TestDeclaration.cpp  TestEvaluator.cpp  TestPKB.cpp  TestQueryConstraints.cpp  TestQueryEvaluator.cpp  TestQueryManager.cpp  TestQueryPreProcessor.cpp  TestQueryTokenizer.cpp  TestQueryValidator.cpp  TestQuoteIdent.cpp  TestSimpleLexer.cpp  TestSimpleParser.cpp  TestSuchThat.cpp  TestSynonym.cpp
src/unit_testing/src/pkb/: TestPKB.cpp  TestPKBExtension.cpp
src/unit_testing/src/query_builder/: TestQueryBuilder.cpp  TestQueryLexer.cpp  TestQueryParser.cpp  TestQueryPreProcessor.cpp  TestQueryTokenizer.cpp  TestQueryValidator.cpp  TestRelCond.cpp  TestSynonym.cpp
src/unit_testing/src/query_executor/: TestClausePrioritizer.cpp  TestConstraintDatabase.cpp  TestConstraintSolver.cpp  TestQueryConstraints.cpp  TestQueryExecutor.cpp
src/unit_testing/src/simple_source/: TestExprParser.cpp  TestSimpleLexer.cpp  TestSimpleParser.cpp
src/unit_testing/src/simple_source/parser/: TestAssign.cpp  TestCall.cpp  TestCondExpr.cpp  TestExpr.cpp  TestIf.cpp  TestInterface.cpp  TestMultiProcedure.cpp  TestPrint.cpp  TestProcedure.cpp  TestRead.cpp  TestStatementList.cpp  TestWhile.cpp
tests/: 00_notes_for_report.txt  10_simple_source_deep_nesting.txt  111_queries_oneSynonym_oneClause.txt  112_queries_twoSynonym_oneClause.txt  212_queries_twoSynonym_oneClause.txt  Affects-Source1.txt  Affects-Source2.txt  Affects-Source3.txt  BipTest.txt  Combination_queries.txt  Combination_source.txt  Merging2_queries.txt  Merging2_source.txt  Multiple_nested_adv_queries.txt  Multiple_nested_adv_source.txt  Test1-Source.txt  affects_queries.txt  affects_source.txt  no-control-var-loops.txt  source_1.txt
(+2239 files in other folders)
